# realmate-webchat-challenge

./: INSTRUCTIONS.md  README.md  docker-compose.yml  dockerfile  env.example  manage.py  package.json  pyproject.toml  requirements.txt
docs/: INSTRUCTIONS.md  architecture.mmd
realmate-challenge/: asgi.py  settings.py  urls.py  wsgi.py
realmate-challenge/frontend/src/pages/: index.js
realmate-challenge/frontend/src/services/: api.js
realmate_challenge/: asgi.py  celery.py  settings.py  urls.py
realmate_challenge/frontend/: next.config.js  package-lock.json  package.json
realmate_challenge/frontend/src/: document.js  theme.js
realmate_challenge/frontend/src/components/: ConversationDetail.js  ConversationList.js  Login.js
realmate_challenge/frontend/src/pages/: _app.js  index.js  register.js
realmate_challenge/frontend/src/pages/conversations/: [id].js  index.js
src/components/: ConversationDetail.js  ConversationList.js
webhook_api/: admin.py  apps.py  auth.py  consumers.py  event_handlers.py  middleware.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
webhook_api/migrations/: 0001_initial.py  0002_conversation_agent_conversation_customer_userprofile.py  0003_message_author_alter_message_direction.py  0004_alter_message_options.py
