[project]
name = "realmate_challenge"
version = "0.1.0"
description = ""
authors = [{ name = "Felipe Agapito", email = "agapitonogueira@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["django (>=5.1.6,<6.0.0)", "djangorestframework (>=3.16.0,<4.0.0)", "django-cors-headers (>=4.7.0,<5.0.0)", "pyjwt (>=2.10.1,<3.0.0)", "celery>=5.2.0,<6.0.0", "redis>=4.0.0,<5.0.0", "psycopg2-binary>=2.9.0,<3.0.0"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "realmate_challenge"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
